# PFMS-A2020

./: .gitignore
quizzes/quiz0/: ACK.txt  README.md
quizzes/quiz0/a/: arrays.cpp
quizzes/quiz0/b/: main.cpp  sample.cpp  sample.h
quizzes/quiz1/: ACK.txt  README.md
quizzes/quiz1/a/: main.cpp  person.cpp  person.h
quizzes/quiz1/b/: main.cpp  rectangle.h  shape.h
quizzes/quiz10/: ACK.txt  README.md
quizzes/quiz2/: ACK.txt  README.md
quizzes/quiz2/a/: circle.cpp  circle.h  main.cpp  shape.h
quizzes/quiz2/b/: car.cpp  car.h  controllerinterface.cpp  controllerinterface.h  main.cpp
quizzes/quiz3/: ACK.txt
quizzes/quiz3/a/: analysis.cpp  analysis.h  line.cpp  line.h  main.cpp
quizzes/quiz3/b/: sum_doubles.cpp
quizzes/quiz4/: ACK.txt  README.md
quizzes/quiz4/b/: data_race.cpp
quizzes/quiz5/: ACK.txt  README.md
quizzes/quiz5/a/: graph.cpp
quizzes/quiz5/b/: main.cpp
quizzes/quiz6/: ACK.txt  README.md
quizzes/quiz6/a/: main.cpp
quizzes/quiz6/b/: complex.cpp  test_complex.cpp
quizzes/quiz7/: ACK.txt  README.md
quizzes/quiz7/a/: display_race.cpp  main.cpp
quizzes/quiz8/: ACK.txt  README.md
quizzes/quiz8/a/: main.cpp  rectangle.cpp  rectanglehelper.cpp  rectanglehelper.h  vector_ops.cpp
quizzes/quiz9/: ACK.txt  README.md
quizzes/review0/a/: arrays  arrays.cpp
quizzes/review0/b/: Makefile  main  main.cpp  sample.cpp  sample.h
quizzes/review1/: README.md
quizzes/review1/a/: person.cpp  person.h
quizzes/review1/b/: main.cpp
quizzes/review1/quiz1/: ACK.txt
quizzes/review10/: README.md
quizzes/review2/: README.md
quizzes/review2/a/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp  shape.h  triangle.cpp  triangle.h
quizzes/review2/b/: CMakeLists.txt  car.cpp  car.h  controllerinterface.cpp  controllerinterface.h  main.cpp  racer.h
quizzes/review3/: README.md
quizzes/review3/a/: analysis.cpp  analysis.h  analysisinterface.h  main.cpp
quizzes/review3/b/: sum_doubles.cpp
quizzes/review4/: README.md
quizzes/review5/: README.md
quizzes/review6/: README.md
quizzes/review7/: README.md
quizzes/review9/: README.md
scratch/DoxyTest/: CMakeLists.txt  class.h
scratch/a2_skeleton/: CMakeLists.txt  Doxyfile.in  index.dox  laser.cpp  laser.h  main.cpp  ranger.cpp  ranger.h  rangerfusion.cpp  rangerfusion.h  sonar.cpp  sonar.h
scratch/a2_skeleton/docs/: Doxyfile
scratch/a2_skeleton/docs/html/: annotated.html  annotated_dup.js  cell_8h_source.html  classCell-members.html  classCell.html  classCell.js  classLaser-members.html  classLaser.html  classLaser.js  classLaser__coll__graph.map  classLaser__inherit__graph.md5  classRanger-members.html  classRanger.html  classRanger.js  classRangerFusion-members.html  classRangerFusion.html  classRangerFusion.js  classRangerFusionInterface-members.html  classRangerFusionInterface.html  classRangerFusionInterface.js  classRangerFusionInterface__inherit__graph.map  classRangerFusionInterface__inherit__graph.md5  classRangerFusion__coll__graph.map  classRangerFusion__coll__graph.md5  classRangerInterface-members.html  classRangerInterface.html  classRangerInterface.js  classRangerInterface__inherit__graph.map  classRangerInterface__inherit__graph.md5  classRanger__coll__graph.map  classRanger__coll__graph.md5  classRanger__inherit__graph.map  classRanger__inherit__graph.md5  classSonar-members.html  classSonar.html  classSonar.js  classSonar__coll__graph.map  classSonar__inherit__graph.md5  classes.html  files.html  (+61 more)
scratch/a2_skeleton/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  groups_0.js  groups_2.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js
scratch/a2_skeleton/docs/latex/: annotated.tex  classCell.tex  classLaser.tex  classLaser__coll__graph.md5  classRanger.tex  classRangerFusion.tex  classRangerFusionInterface.tex  classRangerFusionInterface__inherit__graph.md5  classRangerFusion__inherit__graph.md5  classRangerInterface.tex  classRangerInterface__inherit__graph.md5  classRanger__coll__graph.md5  classRanger__inherit__graph.md5  classSonar.tex  classSonar__coll__graph.md5  files.tex  group__Fusion.tex  group__Main.tex  group__Ranger.tex  hierarchy.tex  index.tex  laser_8h.tex  laser_8h__dep__incl.md5  laser_8h__incl.md5  main_8cpp.tex  main_8cpp__incl.md5  md__home_ajal_git_pfms-2020a-ajalsingh_scratch_README.tex  modules.tex  ranger_8h.tex  ranger_8h__dep__incl.md5  ranger_8h__incl.md5  rangerfusion_8h.tex  rangerfusion_8h__dep__incl.md5  rangerfusion_8h__incl.md5  refman.tex  sonar_8h.tex  sonar_8h__dep__incl.md5  sonar_8h__incl.md5  structPoint.tex
scratch/a2_skeleton/test/: utest_rawdata.cpp
scratch/a3_v3/: CMakeLists.txt  Doxyfile  baseStation.cpp  baseStation.h  friendlyControl.cpp  friendlyControl.h  friendlyData.cpp  friendlyData.h  index.dox  interceptBogies.cpp  interceptBogies.h  main.cpp  processData.cpp  processData.h  purePursuit.cpp  purePursuit.h
scratch/a4_path_following/: CMakeLists.txt  README.md  mainpage.dox  package.xml
scratch/a4_path_following/launch/: a4_path_following.launch
scratch/a4_path_following/rviz/: a4.rviz
scratch/a4_path_following/src/: controller_helper.cpp  geometry.cpp  image_processing.cpp  image_processing.h  ogmap_visualiser.cpp  ogmap_visualiser.h  path_manager.cpp  pure_pursuit.cpp  ref_frame_conversion.cpp  velocity_controller.cpp  velocity_controller.h
scratch/a4_path_following/test/: geometry_test.cpp  laser_test.cpp  ref_frame_test.cpp  simple_path_test.cpp
scratch/a4_path_following/test/bag/: laser_no_obstacle.bag  laser_no_wall.bag  laser_obstacle.bag  laser_wall.bag
scratch/assignment1/: CMakeLists.txt  main.cpp  radar.cpp  radar.h
scratch/week04/starter/shape_lib/: CMakeLists.txt
scratch/week07/: TUTORIAL.md
(+85 files in other folders)
